# LLM-agent-practice

./: README.md  pyproject.toml
notebooks/: Agent.ipynb  agent_supervisor.ipynb  exploration.ipynb  langchain_agent.ipynb  multiple_agents.ipynb  single_agent_w_multiple_tools.ipynb
