[tool.poetry]
name = "llm-agent-with-gemini"
version = "0.1.0"
description = "creating LLM Agent with LangChain and Gemini"
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.1"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
langchain-google-vertexai = "^1.0.4"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
docformatter = "^1.7.5"
pre-commit = "^3.7.1"
streamlit = "^1.35.0"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
