[tool.poetry]
name = "llm-agent-with-gemini"
version = "0.1.0"
description = "creating LLM Agent with LangChain and Gemini"
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.1"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
langchain-google-vertexai = "^1.0.4"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
docformatter = "^1.7.5"
pre-commit = "^3.7.1"
streamlit = "^1.35.0"
pytest = "^8.2.1"
python-dotenv = "^1.0.1"
tavily-python = "^0.3.3"
langchain-community = "^0.2.1"
beautifulsoup4 = "^4.12.3"
langchain-chroma = "^0.1.1"
pysqlite3-binary = "^0.5.2.post3"
langchain-openai = "^0.1.7"
langchain-google-genai = "^1.0.5"
langchainhub = "^0.1.16"
faiss-cpu = "^1.8.0"
langgraph = "^0.0.55"
langchain-huggingface = "^0.0.1"
iprogress = "^0.4"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
